--- a/battleship/battleship.cabal
+++ b/battleship/battleship.cabal
@@ -14,9 +14,8 @@ cabal-version:       >=1.10
 extra-source-files:  README.md
                      CHANGELOG.md
 
-executable battleship
+library 
   hs-source-dirs:      src
-  main-is:             Main.hs
   build-depends:       base >=4.9, 
                        containers,
                        vty, 
@@ -24,8 +23,10 @@ executable battleship
                        network-simple,
                        bytestring,
                        utf8-string,
-                       split
-  other-modules:       UI, 
+                       split,
+                       QuickCheck
+  exposed-modules:     Lib, 
+                       UI, 
                        State,
                        Network,
                        Types,
@@ -33,7 +34,23 @@ executable battleship
                        Transition,
                        Game
   default-language:    Haskell2010
-  build-depends:       base >= 4.7 && < 5
+  ghc-options:         -Wall
+                       -Wcompat
+                       -Widentities
+                       -Wincomplete-record-updates
+                       -Wincomplete-uni-patterns
+                       -Wmissing-export-lists
+                       -Wmissing-home-modules
+                       -Wpartial-fields
+                       -Wredundant-constraints
+                       -W
+
+executable battleship-exec
+  hs-source-dirs:      app 
+  main-is:             Main.hs
+  build-depends:       base >=4.9, 
+                       battleship
+  default-language:    Haskell2010
   ghc-options:         -Wall
                        -Wcompat
                        -Widentities
@@ -44,3 +61,15 @@ executable battleship
                        -Wpartial-fields
                        -Wredundant-constraints
                        -W -threaded
+
+test-suite battleship-test
+  type:                exitcode-stdio-1.0
+  hs-source-dirs:      test
+  main-is:             Test.hs
+  build-depends:       base >=4.9, 
+                       tasty, 
+                       tasty-quickcheck, 
+                       QuickCheck, 
+                       battleship
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+  default-language:    Haskell2010
